environments/nftables_migration_from_iptables_hard/data/iptables-rules.txt
# Generated by iptables-save v1.6.1 on Mon Dec 18 14:32:45 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -s 10.0.50.0/24 -m conntrack --ctstate NEW -m recent --set --name SSH --rsource
-A INPUT -p tcp -m tcp --dport 22 -s 10.0.50.0/24 -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 4 --name SSH --rsource -j DROP
-A INPUT -p tcp -m tcp --dport 22 -s 10.0.50.0/24 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "INPUT-DROP: " --log-level 7
-A INPUT -j DROP
COMMIT
# Completed on Mon Dec 18 14:32:45 2023
